--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/shield.png" />
+    <link rel="icon" type="image/svg+xml" href="../de-code/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SecureConnect</title>
+    <title>DeCode</title>
   </head>
   <body>
     <div id="root"></div>
